[project]
name = "teleport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "allavinner", email = "joel.w.ottosson@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
teleport = "teleport:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
